# nebulastream-frontend

./: .gitignore  CMakeLists copy.txt  CMakeLists.txt  README.md  cmake_finder.py  commands_to_run.txt  libraries_finder.py
.github/workflows/: run-tests.yml
docs/: README.md  dev_docs.md  developer_docs.md  example.md  getting_started.md  introduction.md
example/: CMakeLists.txt  example.cpp
nebulastream_tests/parser_tests/: CMakeLists.txt  aggregate_functions_test.cpp  postgres_query_parsing_test.cpp  query_parsing_test.cpp  select_limit_test.cpp  select_query_with_where_test.cpp  simple_select_query.cpp  subquery_test.cpp  union_query_test.cpp
nebulastream_tests/parser_tests/helpers/: helper_functions.hpp
nebulastream_tests/parser_tests/sql_files/: hyrise_queries.sql  queries.sql
src/: CMakeLists.txt
src/benchmark/: CMakeLists.txt
src/benchmark/tpch/: CMakeLists.txt  main.cpp  tpch_queries.cpp  tpch_queries.hpp
src/common/: box_renderer.cpp
src/include/nebula/common/: exception.hpp  value.hpp
src/include/nebula/common/enums/: order_by_type.hpp
src/include/nebula/parser/: nebula_parser.hpp
src/include/nebula/parser/expressions/: base_expression.hpp  column_expression.hpp  comparison_expression.hpp  conjunction_expression.hpp  constant_expression.hpp  expression_types.hpp  function_expression.hpp  parsed_expression.hpp  range_interval_expression.hpp  star_expression.hpp
src/include/nebula/parser/modifiers/: limit_modifier.hpp  result_modifier.hpp
src/include/nebula/parser/nodes/: group_by_node.hpp  order_by_node.hpp  query_node.hpp  select_node.hpp  set_operation_node.hpp  tumbling_window_node.hpp  window_range_node.hpp
src/include/nebula/parser/refs/: base_table_ref.hpp  sub_query_ref.hpp  table_ref.hpp  table_ref_type.hpp
src/include/nebula/parser/statements/: select_statement.hpp  sql_statement.hpp  sql_statement_collection.hpp  statement_type.hpp
src/include/nebula/parser/transformer/: transformer.hpp
src/libraries/pg_query/: src_backend_parser_gram.cpp
src/libraries/pg_query/grammar/: grammar.cpp  grammar.hpp  grammar.y.tmp
src/libraries/pg_query/grammar/statements/: select.y
src/libraries/pg_query/grammar/types/: select.yh
src/libraries/pg_query/include/nodes/: nodes.hpp  parsenodes.hpp  primnodes.hpp
src/libraries/pg_query/include/parser/: gram.hpp
src/libraries/scripts/: generate_grammar.py
src/parser/: CMakeLists.txt  nebula_parser.cpp  query_error_context.cpp
src/parser/constraints/: CMakeLists.txt
src/parser/expressions/: CMakeLists.txt  column_expression.cpp  comparison_expression.cpp  conjunction_expression.cpp  constant_expression.cpp  function_expression.cpp  parsed_expression.cpp  star_expression.cpp
src/parser/modifiers/: CMakeLists.txt  limit_modifier.cpp
src/parser/nodes/: CMakeLists.txt  group_by_node.cpp  order_by_node.cpp  select_node.cpp  set_operation_node.cpp
src/parser/refs/: CMakeLists.txt  base_table_ref.cpp  sub_query_ref.cpp
src/parser/statements/: CMakeLists.txt  select_statement.cpp  sql_statement.cpp  sql_statement_collection.cpp  statement_type.cpp
src/parser/statements/includes/: select_statement.h
src/parser/transformer/: CMakeLists.txt  transform_bool.cpp  transform_columnref.cpp  transform_constant.cpp  transform_expression.cpp  transform_function.cpp  transform_groupby.cpp  transform_operator.cpp  transform_orderby.cpp  transform_select.cpp  transform_tableref.cpp  transform_window_range.cpp  transformer.cpp
src/storage/: CMakeLists.txt
tools/utils/: test_platform.cpp
