add_subdirectory(common)
add_subdirectory(parser)
add_subdirectory(function)
add_subdirectory(planner)
add_subdirectory(storage)
add_subdirectory(main)
add_subdirectory(catalog)
add_subdirectory(optimizer)
add_subdirectory(execution)
add_subdirectory(parallel)
add_subdirectory(transaction)
add_subdirectory(verification)
add_subdirectory(core_functions)